# sip_optimal_control

./: .bazelrc  LICENSE  MODULE.bazel  README.md
.github/workflows/: benchmarks.yml  ci.yml
benchmarks/: BUILD.bazel  lqr_benchmark.cpp  newton_kkt_benchmark.cpp
sip_optimal_control/: BUILD.bazel  helpers.cpp  helpers.hpp  lqr.cpp  lqr.hpp  sip_optimal_control.cpp  sip_optimal_control.hpp  types.cpp  types.hpp
tests/: BUILD.bazel  lqr_test.cpp  variable_dimensions_test.cpp
