module(name = "sip_optimal_control", version = "0.0.1")

# SIP
# Download from https://anonymous.4open.science/r/sparse-interior-point.
local_path_override(
    module_name = "sip",
    path = "/path/to/your/local/sip", # Replace with the actual path
)

# eigen
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
