module(name = "sip_optimal_control", version = "0.0.1")

# SIP
# https://github.com/joaospinto/sip
bazel_dep(name = "sip")
git_override(
    module_name = "sip",
    remote = "https://github.com/joaospinto/sip.git",
    commit = "36707b04e8ef930bffd76ee7f2cc7beebfbd74d4",
)

# eigen
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")

# rules_cc
bazel_dep(name = "rules_cc", version = "0.2.17")

# Hermetic C++ Toolchain (Zig CC)
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
