module(
    name = "sip_optimal_control",
    version = "0.0.1",
)

# SIP
# https://github.com/joaospinto/sip
bazel_dep(name = "sip")
git_override(
    module_name = "sip",
    commit = "b73753faa48068808b9f8ebba146192884b711fc",
    remote = "https://github.com/joaospinto/sip.git",
)

# eigen
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")

# Google Test
# https://github.com/google/googletest
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# Google Benchmark
# https://github.com/google/benchmark
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)

# rules_cc
bazel_dep(name = "rules_cc", version = "0.2.17")

# Hermetic C++ Toolchain (Zig CC)
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0", dev_dependency = True)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains", dev_dependency = True)
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
    dev_dependency = True,
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
