load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "lqr_test",
    size = "small",
    srcs = ["lqr_test.cpp"],
    linkstatic = True,
    deps = [
        "//sip_optimal_control:lqr",
        "@eigen",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "variable_dimensions_test",
    size = "small",
    srcs = ["variable_dimensions_test.cpp"],
    linkstatic = True,
    deps = [
        "//sip_optimal_control:helpers",
        "@eigen",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
